app/src/client/components/app/App.css
body {
  font-family: system-ui;
  font-size: 1rem;
}

.app {
  display: flex;
  flex-direction: column;
  height: 100%;
}

header,
main {
  flex-shrink: 0;
}

main {
  flex-grow: 1;
  padding: 1rem;

  @nest .light-theme & {
    background: white;
  }

  @nest .dark-theme & {
    background: #333;
  }
}

